# fishros2_fxl

./: .gitignore  README.md  main.cpp
chapt2/: nove11.txt  nove12.txt  nove13.txt
chapt2/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/demo_cpp_pkg/src/: cpp_node.cpp  learn_thread.cpp
chapt2/demo_python_pkg/: package.xml  setup.py
chapt2/demo_python_pkg/demo_python_pkg/: learn_thread.py  python_node.py
chapt2/demo_python_pkg/test/: python_node.py
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/topic_ws/src/demo_python_topic/: novel11.txt  package.xml  setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chapt4/chapt4_ws/src/chapt4_interfaces/: package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  (+1 more)
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
(+1 files in other folders)
